Basic web security features

--- a/CV.Management.Web/Web.config
+++ b/CV.Management.Web/Web.config
@@ -5,8 +5,12 @@
   -->
 <configuration>
   <configSections>
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="nwebsec">
+      <!-- For information on how to configure NWebsec please visit: https://docs.nwebsec.com/ -->
+      <section name="httpHeaderSecurityModule" type="NWebsec.Modules.Configuration.HttpHeaderSecurityConfigurationSection, NWebsec" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Server=tcp:cv-management.database.windows.net,1433;Initial Catalog=cv-management;Persist Security Info=False;User ID=rolands;Password=Testing_2018;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
@@ -21,7 +25,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.6.1" enableVersionHeader="false" />
     <customErrors mode="Off" />
     <httpModules>
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" />
@@ -29,6 +33,12 @@
     </httpModules>
   </system.web>
   <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <remove name="X-Powered-By" />
+        <clear />
+      </customHeaders>
+    </httpProtocol>
     <rewrite>
       <rules>
         <rule name="HTTP to HTTPS redirect" stopProcessing="true">
@@ -55,15 +65,24 @@
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="managedHandler" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
+      <add name="NWebsecHttpHeaderSecurityModule" type="NWebsec.Modules.HttpHeaderSecurityModule, NWebsec" />
     </modules>
-    
+
     <validation validateIntegratedModeConfiguration="false" />
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+    <security>
+      <requestFiltering>
+        <hiddenSegments>
+          <add segment="NWebsecConfig" />
+        </hiddenSegments>
+      </requestFiltering>
+    </security>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -124,7 +143,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Extensions.Logging" publicKeyToken="adb9793829ddae60" culture="neutral" />
@@ -176,4 +195,25 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <nwebsec>
+    <httpHeaderSecurityModule xmlns="http://nwebsec.com/HttpHeaderSecurityModuleConfig.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="NWebsecConfig/HttpHeaderSecurityModuleConfig.xsd">
+      <redirectValidation enabled="true" />
+      <securityHttpHeaders>
+        <x-Frame-Options policy="Deny"/>
+        <strict-Transport-Security max-age="365" />
+        <x-Content-Type-Options enabled="true" />
+        <x-XSS-Protection policy="FilterEnabled" blockMode="true"/>
+        <x-Download-Options enabled="false"/>
+      </securityHttpHeaders>
+      <x-Robots-Tag enabled="true"
+                       noIndex="true"
+                       noFollow="true"
+                       noArchive="true"
+                       noOdp="true"
+                       noSnippet="true"
+                       noImageIndex="true"
+                       noTranslate="true"/>
+    </httpHeaderSecurityModule>
+    
+  </nwebsec>
 </configuration>
