--- a/CV.Management.Web/packages.config
+++ b/CV.Management.Web/packages.config
@@ -25,7 +25,10 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="3.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.3" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.3" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.3" targetFramework="net461" />
@@ -37,6 +40,8 @@
   <package id="Microsoft.Extensions.Options" version="3.1.3" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.3" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net461" />
+  <package id="Microsoft.NetCore.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.NetFramework.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Owin" version="4.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="4.1.0" targetFramework="net461" />
@@ -49,6 +54,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="NWebsec" version="6.0.0" targetFramework="net461" />
+  <package id="NWebsec.Core" version="3.0.0" targetFramework="net461" />
+  <package id="NWebsec.Mvc" version="6.0.0" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Owin.Security.Providers.LinkedIn" version="2.26.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
