--- a/CV.Management.Web/Web.config
+++ b/CV.Management.Web/Web.config
@@ -199,20 +199,13 @@
     <httpHeaderSecurityModule xmlns="http://nwebsec.com/HttpHeaderSecurityModuleConfig.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="NWebsecConfig/HttpHeaderSecurityModuleConfig.xsd">
       <redirectValidation enabled="true" />
       <securityHttpHeaders>
-        <x-Frame-Options policy="Deny"/>
+        <x-Frame-Options policy="Deny" />
         <strict-Transport-Security max-age="365" />
         <x-Content-Type-Options enabled="true" />
-        <x-XSS-Protection policy="FilterEnabled" blockMode="true"/>
-        <x-Download-Options enabled="false"/>
+        <x-XSS-Protection policy="FilterEnabled" blockMode="true" />
+        <x-Download-Options enabled="false" />
       </securityHttpHeaders>
-      <x-Robots-Tag enabled="true"
-                       noIndex="true"
-                       noFollow="true"
-                       noArchive="true"
-                       noOdp="true"
-                       noSnippet="true"
-                       noImageIndex="true"
-                       noTranslate="true"/>
+      <x-Robots-Tag enabled="true" noIndex="true" noFollow="true" noArchive="true" noOdp="true" noSnippet="true" noImageIndex="true" noTranslate="true" />
     </httpHeaderSecurityModule>
     
   </nwebsec>
