--- a/CV.Management.Web/packages.config
+++ b/CV.Management.Web/packages.config
@@ -60,6 +60,7 @@
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Owin.Security.Providers.LinkedIn" version="2.26.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.4" targetFramework="net461" />
