--- a/CV.Management.Web/Web.Release.config
+++ b/CV.Management.Web/Web.Release.config
@@ -16,8 +16,7 @@
   -->
 
   <appSettings>
-    <add key="InstrumentationKey" value="c710e967-cba5-4333-9e0b-67d57ebe5959" />
-    <add key="InstrumentationKey" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="InstrumentationKey" value="2076ebb2-04b8-4991-9692-1757c61523c2" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
 
   <!--<connectionStrings>
