--- a/CV.Management.Web/Web.config
+++ b/CV.Management.Web/Web.config
@@ -197,7 +197,9 @@
   </system.codedom>
   <nwebsec>
     <httpHeaderSecurityModule xmlns="http://nwebsec.com/HttpHeaderSecurityModuleConfig.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="NWebsecConfig/HttpHeaderSecurityModuleConfig.xsd">
-      <redirectValidation enabled="true" />
+      <redirectValidation enabled="true">
+        <allowSameHostRedirectsToHttps enabled="true" />
+      </redirectValidation>
       <securityHttpHeaders>
         <x-Frame-Options policy="Deny" />
         <strict-Transport-Security max-age="365" />
