--- a/CV.Management.Web/Web.config
+++ b/CV.Management.Web/Web.config
@@ -13,7 +13,9 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=tcp:cv-management.database.windows.net,1433;Initial Catalog=cv-management;Persist Security Info=False;User ID=rolands;Password=Testing_2018;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="AmropDb" connectionString=""/>
+    <add name="LinkedInClientId" connectionString=""/>
+    <add name="LinkedInClientKey" connectionString=""/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -21,6 +23,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="InstrumentationKey" value="37569a09-67b0-47e3-8082-524f7046e48e" />
+    <!--<add key="TestConfig" value="TestValue"/>-->
   </appSettings>
   <system.web>
     <authentication mode="None" />
