--- a/CV.Management.Web/Web.Production.config
+++ b/CV.Management.Web/Web.Production.config
@@ -20,16 +20,10 @@
 
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
-    <!--
-      In the example below, the "Replace" transform will replace the entire 
-      <customErrors> section of your web.config file.
-      Note that because there is only one customErrors section under the 
-      <system.web> node, there is no need to use the "xdt:Locator" attribute.
-      
-      <customErrors defaultRedirect="GenericError.htm"
-        mode="RemoteOnly" xdt:Transform="Replace">
-        <error statusCode="500" redirect="InternalError.htm"/>
-      </customErrors>
-    -->
+
+    <customErrors mode="On" defaultRedirect="~/Error/Index" xdt:Transform="Replace">
+      <error redirect="~/Error/NotFound" statusCode="404" />
+    </customErrors>
+
   </system.web>
 </configuration>
