--- a/CV.Management.Web/CV.Management.Web.csproj
+++ b/CV.Management.Web/CV.Management.Web.csproj
@@ -299,7 +299,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="Helpers\AccessHelper.cs" />
     <Compile Include="Helpers\ConfigurationHelper.cs" />
     <Compile Include="MigrationsApp\201902272154437_Initial.cs" />
     <Compile Include="MigrationsApp\201902272154437_Initial.Designer.cs">
@@ -365,6 +364,7 @@
     <Compile Include="Models\Database\Position.cs" />
     <Compile Include="Models\Database\Profile.cs" />
     <Compile Include="Models\Database\ProfileImage.cs" />
+    <Compile Include="Models\EditUserViewModel.cs" />
     <Compile Include="Models\EducationViewModel.cs" />
     <Compile Include="Models\ErrorViewModel.cs" />
     <Compile Include="Models\FileUploadViewModel.cs" />
@@ -376,6 +376,7 @@
     <Compile Include="Models\NoticePeriodViewModel.cs" />
     <Compile Include="Models\PersonalInformationViewModel.cs" />
     <Compile Include="Models\ProfileViewModel.cs" />
+    <Compile Include="Models\UserMissingViewModel.cs" />
     <Compile Include="Models\ViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
@@ -561,6 +562,8 @@
     <Content Include="Views\Admin\AccessDenied.cshtml" />
     <Content Include="Views\Error\Index.cshtml" />
     <Content Include="Views\Error\NotFound.cshtml" />
+    <Content Include="Views\Admin\EditUser.cshtml" />
+    <Content Include="Views\Admin\UserMissing.cshtml" />
     <None Include="Web.Production.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
