Added missing configuration

--- a/CV.Management.Web/Web.config
+++ b/CV.Management.Web/Web.config
@@ -13,6 +13,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
+    <add name="AmropDb" connectionString=""/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -20,6 +21,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="InstrumentationKey" value="37569a09-67b0-47e3-8082-524f7046e48e" />
+    <add key="LinkedInClientId" value=""/>
+    <add key="LinkedInClientKey" value=""/>
+    <add key="AmropSendGridKey" value=""/>
     <!--<add key="TestConfig" value="TestValue"/>-->
   </appSettings>
   <system.web>
