Global admin rights management.

--- a/CV.Management.Web/CV.Management.Web.csproj
+++ b/CV.Management.Web/CV.Management.Web.csproj
@@ -564,6 +564,7 @@
     <Content Include="Views\Error\NotFound.cshtml" />
     <Content Include="Views\Admin\EditUser.cshtml" />
     <Content Include="Views\Admin\UserMissing.cshtml" />
+    <Content Include="Views\Account\SetGlobalAdmins.cshtml" />
     <None Include="Web.Production.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
