--- a/CV.Management.Web/Web.Production.config
+++ b/CV.Management.Web/Web.Production.config
@@ -7,15 +7,19 @@
     In the example below, the "SetAttributes" transform will change the value of 
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
     finds an attribute "name" that has a value of "MyDB".
-    
-    <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
   -->
+
+  <connectionStrings>
+    <add name="AmropDb"
+      connectionString="Server=.\MSSQLSERVER2014;Database=cv_amrop_db;User Id=admin;Password=#09Fk3uo;"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
+  
   <appSettings>
     <add key="InstrumentationKey" value="c710e967-cba5-4333-9e0b-67d57ebe5959" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="LinkedInClientId" value="86tyf3f72v1pa7" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="LinkedInClientKey" value="LjB5PRmGske8uWzO" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="AmropSendGridKey" value="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" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
 
   <system.web>
