--- a/CV.Management.Web/Web.Release.config
+++ b/CV.Management.Web/Web.Release.config
@@ -8,25 +8,23 @@
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
     finds an attribute "name" that has a value of "MyDB".
 
-    <connectionStrings>
-      <add name="MyDB"
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
+    
   -->
 
   <appSettings>
     <add key="InstrumentationKey" value="2076ebb2-04b8-4991-9692-1757c61523c2" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
 
-  <!--<connectionStrings>
-    <add xdt:Transform="Remove" />
-  </connectionStrings>-->
+  <connectionStrings>
+    <add name="AmropDb"
+      connectionString="Server=tcp:cv-management.database.windows.net,1433;Initial Catalog=cv-management;Persist Security Info=False;User ID=rolands;Password=Testing_2018;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
 
-  <system.web>
+  <!--<system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <customErrors mode="On" defaultRedirect="~/Error/Index" xdt:Transform="Replace">
       <error redirect="~/Error/NotFound" statusCode="404" />
     </customErrors>
-  </system.web>
+  </system.web>-->
 </configuration>
