--- a/CV.Management.Web/CV.Management.Web.csproj
+++ b/CV.Management.Web/CV.Management.Web.csproj
@@ -289,6 +289,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Models\CreateProfileViewModel.cs" />
     <Compile Include="Controllers\CvController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\FileDeletionController.cs" />
@@ -574,6 +575,8 @@
     <Content Include="Views\Admin\UserMissing.cshtml" />
     <Content Include="Views\Account\SetGlobalAdmins.cshtml" />
     <Content Include="Views\Cv\AccessDenied.cshtml" />
+    <Content Include="Views\Cv\Create.cshtml" />
+    <Content Include="Views\Cv\UserAlreadyExists.cshtml" />
     <None Include="Web.Production.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
