--- a/CV.Management.Web/CV.Management.Web.csproj
+++ b/CV.Management.Web/CV.Management.Web.csproj
@@ -289,6 +289,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\MigrationController.cs" />
     <Compile Include="MigrationsApp\202011261017566_OtherLanguage.cs" />
     <Compile Include="MigrationsApp\202011261017566_OtherLanguage.designer.cs">
       <DependentUpon>202011261017566_OtherLanguage.cs</DependentUpon>
