--- a/CV.Management.Web/CV.Management.Web.csproj
+++ b/CV.Management.Web/CV.Management.Web.csproj
@@ -298,6 +298,10 @@
     <Compile Include="MigrationsApp\202012030554511_ProfileLanguage.designer.cs">
       <DependentUpon>202012030554511_ProfileLanguage.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsApp\202012040559022_AchievementsSeparate.cs" />
+    <Compile Include="MigrationsApp\202012040559022_AchievementsSeparate.designer.cs">
+      <DependentUpon>202012040559022_AchievementsSeparate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\AskToCreateCreateViewModel.cs" />
     <Compile Include="Models\CreateProfileViewModel.cs" />
     <Compile Include="Controllers\CvController.cs" />
@@ -371,6 +375,7 @@
     <Compile Include="Models\CareerSummaryViewModel.cs" />
     <Compile Include="Models\CompensationViewModel.cs" />
     <Compile Include="Models\ConfirmUserDeleteViewModel.cs" />
+    <Compile Include="Models\Database\Achievement.cs" />
     <Compile Include="Models\Database\AdditionalCourse.cs" />
     <Compile Include="Models\Database\AdditionalFile.cs" />
     <Compile Include="Models\Database\AuditLog.cs" />
@@ -589,6 +594,7 @@
     <Content Include="Views\Cv\UserAlreadyExists.cshtml" />
     <Content Include="Views\Manage\Delete.cshtml" />
     <Content Include="Views\Cv\AskToCreateProfile.cshtml" />
+    <Content Include="Views\Cv\UserNotFound.cshtml" />
     <None Include="Web.Production.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -636,6 +642,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsApp\202012030554511_ProfileLanguage.resx">
       <DependentUpon>202012030554511_ProfileLanguage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsApp\202012040559022_AchievementsSeparate.resx">
+      <DependentUpon>202012040559022_AchievementsSeparate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202011240820479_TermsAndConditions.resx">
       <DependentUpon>202011240820479_TermsAndConditions.cs</DependentUpon>
